<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_5"
    android:gravity="center_vertical|center_horizontal"
    android:visibility="visible">

    <TextView
        android:id="@+id/settings_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/settings_window"
        android:layout_alignParentTop="false"
        android:text="@string/set_language"
        android:textColor="#fff"
        android:textIsSelectable="false"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/settings_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/background_3"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:id="@+id/korean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:onClick="setting_Korean">

            <TextView
                android:id="@+id/korean_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/korean"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:onClick="setting_English"
            android:layout_marginTop="25dp">

            <TextView
                android:id="@+id/english_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/japan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:onClick="setting_Japan"
            android:layout_marginTop="25dp">

            <TextView
                android:id="@+id/japan_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/japanese"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/china"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:onClick="setting_China"
            android:layout_marginTop="25dp">

            <TextView
                android:id="@+id/china_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chinese"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold" />


        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/settings_window"
        android:layout_alignRight="@+id/settings_window"
        android:layout_alignEnd="@+id/settings_window"
        android:layout_marginRight="4dp"
        android:layout_marginTop="20dp"/>

</RelativeLayout>