<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_menu_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_1"
    android:orientation="vertical"
    android:weightSum="5">

    <RelativeLayout
        android:id="@+id/header_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:id="@+id/App_logo"
            android:layout_width="273dp"
            android:layout_height="76dp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/App_image"
            android:textSize="60dp"
            style="@style/logo_style"
            android:text="@string/app_name"
            />

        <ImageView
            android:id="@+id/App_image"
            android:layout_width="104dp"
            android:layout_height="123dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="13dp"
            android:layout_marginRight="-20dp"
            android:src="@drawable/camera" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/section_up"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <LinearLayout
            android:id="@+id/start_AR"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/background_3"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="intentARcamera"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/start_AR_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/start_AR_text"
                android:src="@drawable/ic_linked_camera_white_24dp" />

            <TextView
                android:id="@+id/start_AR_text"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startAR"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_gallery"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/background_4"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="intentGallery"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/view_gallery_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_gallery_white_24dp" />

            <TextView
                android:id="@+id/view_gallery_text"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gotoGallery"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/section_down"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:focusableInTouchMode="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/background_5"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="intentSettings"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/settings_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_settings_white_24dp" />

            <TextView
                android:id="@+id/settings_text"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/how_to_use"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/background_6"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="intentHowToUse"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/how_to_use_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_explore_white_24dp"/>

            <TextView
                android:id="@+id/how_to_use_text"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/howtouse" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>


